sampler/chain/projects/MPAndroidChart/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/jobs/AnimatedZoomJob.java:117: error: [NullAway] (INDEX= 146) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        return new AnimatedZoomJob(null,null,null,null,0,0,0,0,0,0,0,0,0,0);
                                                  ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/jobs/ZoomJob.java:85: error: [NullAway] (INDEX= 133) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        return new ZoomJob(null, 0, 0, 0, 0, null, null, null);
                                             ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/charts/HorizontalBarChart.java:284: error: [NullAway] (INDEX= 103) (Covered) returning @Nullable expression from method with @NonNull return type
            return null;
            ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/charts/CombinedChart.java:143: error: [NullAway] (INDEX= 93) (Covered) returning @Nullable expression from method with @NonNull return type
            return null;
            ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/data/CombinedData.java:223: error: [NullAway] (INDEX= 101) (Covered) returning @Nullable expression from method with @NonNull return type
            return null;
            ^
	(see http://t.uber.com/nullaway )
